fixed chooser bug wehereby empty ie scrollbar

--- a/public/stylesheets/tags.css
+++ b/public/stylesheets/tags.css
@@ -418,6 +418,7 @@ footer, footer a, footer a:hover { color: #ccc; }
 	position: fixed;
 	top: 0;
 	bottom: 0;
+	width: 100%;
 	max-height: 100%;
 	margin-top:45px;
 	margin-bottom: 45px;
